--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,8 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  background-image: url(../images/background.jpg);
-  background-size: cover;
+  background-image: url(../images/wool.png);
+  font-family: 'Ubuntu', sans-serif;
 }
 
 main {
@@ -13,20 +13,21 @@ main {
 
 
 nav {
-background-color:rgba(255,255,255,0.3);
-border-radius:15px 0 15px 0;
+background-color:rgba(255,255,255,0.2);
+border-radius:0px 0px 15px 15px;
 }
 
 #jumbotron {
-  min-height: 40vh;
+  min-height: 90vh;
 }
 
 h1, h4 {
-  color: #FFF;
+  color:teal;
 }
 
 #bio {
   background-color:rgba(255,255,255,0.3);
+  margin-bottom: 5%;
 
 }
 
@@ -39,4 +40,12 @@ h1, h4 {
 #bioP {
   color: #fff;
   opacity: 1;
+  line-height: 2;
+  text-align: right;
 } 
+
+.page-footer {
+  background-color:rgba(255,255,255,0.2);
+
+  
+}
