--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,9 @@ main {
   flex: 1 0 auto;
 }
 
-
+#heading {
+  font-style: italic;
+}
 
 nav {
 background-color:rgba(255,255,255,0.2);
@@ -48,8 +50,15 @@ h1, h3, h4 {
   text-align: left;
 } 
 
+.activator {
+  max-height: 300px;
+  overflow: auto;
+}
+
+.card .card-title {
+  font-size: 22px;
+}
+
 .page-footer {
   background-color:rgba(255,255,255,0.2);
-
-  
 }
