--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@ main {
   font-style: italic;
 }
 
+.brand-logo {
+  margin-left: 3%;
+}
+
 nav {
 background-color:rgba(255,255,255,0.2);
 border-radius:0px 0px 15px 15px;
@@ -33,7 +37,36 @@ h1, h3, h4 {
 #bio {
   background-color:rgba(255,255,255,0.3);
   margin-bottom: 5%;
+  
+}
 
+#bioP {
+  color: #fff;
+  line-height: 2;
+  text-align: left;
+  padding: 10px;
+} 
+
+#tech {
+  background-color:rgba(255,255,255,0.3);
+  
+}
+
+.carousel-item {
+  text-align: center;
+  font-size: 19px;
+  color: teal;
+  -webkit-text-fill-color: teal;
+  -webkit-text-stroke-width: .5px;
+  -webkit-text-stroke-color: white;
+}
+
+h2 {
+  padding-top:5%;
+  color: teal;
+  -webkit-text-fill-color: teal;
+  -webkit-text-stroke-width: .5px;
+  -webkit-text-stroke-color: white;
 }
 
 #headshot {
@@ -52,18 +85,14 @@ hr {
   overflow: auto;
 }
 
-#bioP {
-  color: #fff;
-  line-height: 2;
-  text-align: left;
-} 
 
 .card .card-title {
   font-size: 18px;
 }
 
 .card-panel {
-  border-radius: 10%;
+  border-radius: 12%;
+  background-color: rgba(255,255,255,0.25);
 }
 
 .card-image {
@@ -76,6 +105,6 @@ hr {
   background-color:rgba(255,255,255,0.2);
 }
 
-form {
-  color: #fff;
+.btn{
+  margin: 5%;
 }
