--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,17 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  background-image: url(../images/wool.png);
+  /* background-image: url(../images/wool.png); */
   font-family: 'Ubuntu', sans-serif;
 }
 
 main {
   flex: 1 0 auto;
+}
+
+#nav-logo {
+  max-width: 200px;
+  margin-top:5%;
 }
 
 #heading {
@@ -19,38 +24,47 @@ main {
 }
 
 nav {
-background-color:rgba(255,255,255,0.2);
-border-radius:0px 0px 15px 15px;
+  height: 75px;
+  background-color: rgba(0, 150, 136, 0.8);
 }
+
+
 
 #jumbotron {
   min-height: 90vh;
 }
 
+.img-circle {
+  margin-top: 15%;
+  border-radius: 50%;
+  max-width: 40%;
+  border: teal 5px solid;
+}
+
 h1, h3, h4 {
-  color:teal;
+  color: teal;
   -webkit-text-fill-color: teal;
   -webkit-text-stroke-width: .5px;
   -webkit-text-stroke-color: white;
 }
 
 #bio {
-  background-color:rgba(255,255,255,0.3);
+  background-color: rgba(0, 0, 0, 0.1);
   margin-bottom: 5%;
-  
 }
 
 #bioP {
-  color: #fff;
-  line-height: 2;
-  text-align: left;
-  padding: 10px;
-  font-size:15px;
-} 
+  border: .5px teal solid;
+  border-radius: 3%;
+  line-height: 1.7;
+  text-align: justify;
+  padding: 15px;
+  font-size: 15px;
+  color: #0d5454f5;
+}
 
 #tech {
-  background-color:rgba(255,255,255,0.3);
-  
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .carousel-item {
@@ -63,7 +77,7 @@ h1, h3, h4 {
 }
 
 h2 {
-  padding-top:5%;
+  padding-top: 5%;
   color: teal;
   -webkit-text-fill-color: teal;
   -webkit-text-stroke-width: .4px;
@@ -79,11 +93,11 @@ h2 {
 }
 
 #headshot {
-  max-width: 40%;
-  min-height: 300px;
-  border-radius:10%;
-  margin: 35px 20px 15px 0;
-  float: left;
+  max-width: 80%;
+  max-height: 75%;
+  border-radius: 3%;
+  border:2px solid teal;
+  margin: 5%;
 }
 
 hr {
@@ -95,27 +109,26 @@ hr {
   overflow: auto;
 }
 
-
 .card .card-title {
   font-size: 18px;
 }
 
 .card-panel {
   border-radius: 12%;
-  background-color: rgba(255,255,255,0.25);
+  background-color: rgba(255, 255, 255, 0.25);
 }
 
 .card-image {
   overflow: hidden;
   height: 250px;
-
 }
 
 .page-footer {
-  background-color:rgba(255,255,255,0.2);
+  background-color: teal;
+  opacity: .8;
 }
 
-.btn{
+.btn {
   margin: 5%;
 }
 
@@ -124,35 +137,28 @@ hr {
 }
 
 .disabled {
-  background-color:#26a69a !important;
-  color:#fff !important;
+  background-color: #26a69a !important;
+  color: #fff !important;
 }
 
-@media screen and (max-width:992px){
-  
+@media screen and (max-width:992px) {
   .left {
     margin-left: 13%;
   }
-
   #headshot {
     max-width: 60%;
   }
-
 }
 
-@media screen and (max-width:480px){
+@media screen and (max-width:480px) {
   .card, .card-panel {
-    margin-left:7% !important;
+    margin-left: 7% !important;
   }
-
   .contact-links {
     font-size: 20px;
     font-variant: small-caps;
   }
-  
   #headshot {
     max-width: 100%;
   }
-
-
 }
