--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,6 +164,9 @@ hr {
   #bioP {
     margin: 2%;
   }
+  /* .card .card-title {
+    font-size:13px;
+  } */
 }
 
 @media screen and (max-width:480px) {
