--- a/newPortfolio2/client/src/Navbar/navbar.css
+++ b/newPortfolio2/client/src/Navbar/navbar.css
@@ -22,11 +22,9 @@
     display: grid;
     grid-column: 2/3;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 1em;
-    /* padding: 5px; */
+    grid-gap: .5em;
     font-size: 1.2rem;
-    /* margin-right: 1rem; */
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .navbar-links .bar-icon {
