--- a/newPortfolio2/client/src/main.css
+++ b/newPortfolio2/client/src/main.css
@@ -1,22 +1,25 @@
 :root {
     --shadow: 0 3px 5px rgba(207, 207, 207, 0.8);
-    --light: lightgrey;
+    --light: rgb(235, 221, 221);
+    --dark:darkgray;
 }
 
 /* Body of Page, Element Tags */
 
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    color:white;
+    color: white;
     font-family: 'Muli', sans-serif;
     background-image: url("./images/desk.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    overflow-x: hidden;
+    width:100vw;
 }
 
 a {
@@ -25,7 +28,6 @@ a {
 
 .container {
     max-width: 80%;
-    margin: auto;
     padding: 1rem;
 }
 
@@ -38,6 +40,14 @@ a {
 .grid-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-items: center;
+    grid-gap: 1em;
+}
+
+.col-3-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
     justify-items: center;
     grid-gap: 1em;
@@ -57,7 +67,7 @@ a {
 }
 
 .link {
-    text-decoration:none;
+    text-decoration: none;
 }
 
 /* -------------------- */
@@ -74,9 +84,8 @@ a {
 
 .section-dark {
     background-color: var(--dark);
-    height: 35rem;
+    min-height: 35rem;
 }
-
 
 .section-black {
     background-color: black;
@@ -86,8 +95,8 @@ a {
 .section-light {
     background-color: var(--light);
     min-height: 20rem;
-    padding:3%;
-    color:black;
+    padding: 3%;
+    color: black;
 }
 
 /* -------------------- */
@@ -104,18 +113,18 @@ a {
     height: 30rem;
 }
 
-.fa-angle-down{
-    font-size:3rem;
+.fa-angle-down {
+    font-size: 3rem;
 }
 
 .frost {
     background: inherit;
     width: 100%;
     height: 100%;
-    overflow:hidden;
+    overflow: hidden;
 }
 
-.frost::before{
+.frost::before {
     content: "";
     background: inherit;
     position: absolute;
@@ -134,10 +143,10 @@ a {
 }
 
 .banner-text {
-    align-self:center;
+    align-self: center;
     justify-self: right;
-    margin-top:40%;
-    margin-right:10%;
+    margin-top: 40%;
+    margin-right: 10%;
     background-color: rgba(128, 128, 128, .7);
     padding: 10px;
     border-radius: 5px;
@@ -150,6 +159,11 @@ a {
 
 /* Intro */
 
+#intro-banner {
+    margin: 1rem;
+    padding-left: 1.5rem;
+}
+
 .intro-paragraph {
     margin: 1rem;
     font-size: 18px;
@@ -161,9 +175,22 @@ a {
 .icon-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap:2rem;
+    grid-gap: 2rem;
 }
 
 .tech-logo {
-    max-width:100px;
+    max-width: 120px;
+}
+
+/* Portfolio */
+
+.project-card {
+    height:600px;
+    border: 2px solid lightgray;
+    padding:5px;
+}
+
+.project-thumb {
+    max-width:100%;
+    /* max-height:200px; */
 }
