--- a/newPortfolio2/client/src/main.css
+++ b/newPortfolio2/client/src/main.css
@@ -185,7 +185,7 @@ a {
 /* Portfolio */
 
 .project-card {
-    height:600px;
+    height:650px;
     border: 2px solid lightgray;
     padding:5px;
 }
@@ -193,4 +193,8 @@ a {
 .project-thumb {
     max-width:100%;
     /* max-height:200px; */
+}
+
+.tech-list {
+    list-style-type: none;
 }
