--- a/newPortfolio2/client/src/main.css
+++ b/newPortfolio2/client/src/main.css
@@ -1,7 +1,7 @@
 :root {
     --shadow: 0 3px 5px rgba(207, 207, 207, 0.8);
     --light: rgb(235, 221, 221);
-    --dark:darkgray;
+    --dark: darkgray;
 }
 
 /* Body of Page, Element Tags */
@@ -19,7 +19,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     overflow-x: hidden;
-    width:100vw;
+    width: 100vw;
 }
 
 a {
@@ -83,7 +83,7 @@ a {
 }
 
 .section-dark {
-    background-color: var(--dark);
+    background-color: darkslategray;
     min-height: 35rem;
 }
 
@@ -184,17 +184,66 @@ a {
 
 /* Portfolio */
 
+.section-banner {
+    padding: 10px;
+    letter-spacing: 3px;
+}
+
 .project-card {
-    height:650px;
-    border: 2px solid lightgray;
-    padding:5px;
+    margin:0rem 0rem 2rem 0rem;
+    background-color:darkslategray;
+    padding:6em;
+    color:var(--light);
+    border-bottom:1px solid white;
+    box-shadow: 0 4px 2px -2px gray;
 }
 
 .project-thumb {
-    max-width:100%;
+    max-width: 100%;
+    border-bottom:1px solid white;
+    border-radius: 5px;
+    box-shadow: 0 4px 2px -2px gray;
+    margin-bottom:1%;
     /* max-height:200px; */
 }
 
+.list-wrapper {
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr 1fr;
+    grid-gap: .5rem;
+    justify-items: center;
+}
+
 .tech-list {
+    font-size:85%;
+    text-align: center;
     list-style-type: none;
+}
+
+.project-title {
+    color:black;
+    background-color:var(--dark);
+    padding:5px;
+    border-radius:5px;
+    letter-spacing:3px;
+}
+
+.project-links {
+    font-size: 85%;
+    text-decoration: none;
+    background-color: white;
+    padding: 10px;
+    border-radius: 5px;
+    color:black;
+}
+
+.project-links:hover {
+    background-color: teal;
+    transition: .5s;
+    color: white;
+}
+
+.project-desc {
+    font-size: 90%;
+    text-align: center;
 }
