--- a/newPortfolio2/client/src/main.css
+++ b/newPortfolio2/client/src/main.css
@@ -187,58 +187,72 @@ a {
 .section-banner {
     padding: 10px;
     letter-spacing: 3px;
+    background-color: rgba(128, 128, 128, .7);
+    margin:2% 35% 0;
+    border-radius:5px;
 }
 
 .project-card {
-    margin:0rem 0rem 2rem 0rem;
-    background-color:darkslategray;
-    padding:6em;
-    color:var(--light);
-    border-bottom:1px solid white;
+    margin: 0rem .3rem 2rem .3rem;
+    /* background-color: darkslategray; */
+    padding: 10%;
+    color: var(--light);
+}
+
+.card-content {
+    background-color: rgba(0, 128, 128, .8);
+    border-radius: 2%;
+    padding: 2rem;
+    /* tweak border shadow */
+    border-bottom: 1px solid white;
     box-shadow: 0 4px 2px -2px gray;
 }
 
 .project-thumb {
     max-width: 100%;
-    border-bottom:1px solid white;
+    border-bottom: 1px solid white;
     border-radius: 5px;
     box-shadow: 0 4px 2px -2px gray;
-    margin-bottom:1%;
-    /* max-height:200px; */
+    margin-bottom: 1%;
 }
 
 .list-wrapper {
     display: grid;
-    grid-template-columns:1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: .5rem;
     justify-items: center;
 }
 
+.tech-title {
+    margin-left:15%;
+    text-decoration: underline;
+}
+
 .tech-list {
-    font-size:85%;
+    /* font-size: 85%; */
     text-align: center;
-    list-style-type: none;
+    list-style-type: square;
 }
 
 .project-title {
-    color:black;
-    background-color:var(--dark);
-    padding:5px;
-    border-radius:5px;
-    letter-spacing:3px;
+    color: white;
+    /* background-color:var(--dark); */
+    padding: 5px;
+    border-radius: 5px;
+    letter-spacing: 3px;
 }
 
 .project-links {
     font-size: 85%;
     text-decoration: none;
-    background-color: white;
+    background-color:rgba(123, 207, 203, 0.7);
     padding: 10px;
     border-radius: 5px;
-    color:black;
+    color: white;
 }
 
 .project-links:hover {
-    background-color: teal;
+    background-color: black;
     transition: .5s;
     color: white;
 }
@@ -246,4 +260,36 @@ a {
 .project-desc {
     font-size: 90%;
     text-align: center;
+}
+
+/* Contact Section */
+
+.contact-buttons {
+    display: grid;
+    grid-template-columns: 1fr 2fr 3fr 2fr 1fr;
+    grid-gap: 1rem;
+    text-align: center;
+    margin-bottom:5%;
+}
+
+.subheading {
+    background-color: rgba(128, 128, 128, .7);
+    margin:0 38% 5% 38%;
+    padding: 15px;
+    border-radius: 5px;
+    letter-spacing: 3px;
+}
+
+.logo {
+    border-radius: 50%;
+    border: 3px black solid;
+    margin: 5%;
+}
+
+.contact-links {
+    text-decoration:none;
+    font-size:1.5rem;
+    padding:20px;
+    border-radius:5px;
+    background-color:rgba(123, 207, 203, 0.7);
 }
