--- a/newPortfolio2/client/src/main.css
+++ b/newPortfolio2/client/src/main.css
@@ -18,8 +18,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    overflow-x: hidden;
-    width: 100vw;
+    
 }
 
 a {
@@ -35,6 +34,8 @@ a {
     display: grid;
     grid-template-columns: 1fr;
     align-items: center;
+    overflow-x: auto;
+    width: 100vw;
 }
 
 .grid-wrapper {
@@ -131,7 +132,7 @@ a {
     left: -25px;
     right: -15px;
     top: -25px;
-    bottom: 10px;
+    bottom: -4px;
     box-shadow: inset 0 0 0 3000px rgba(255, 255, 255, 0.35);
     filter: blur(10px);
 }
@@ -162,15 +163,19 @@ a {
 #intro-banner {
     margin: 1rem;
     padding-left: 1.5rem;
+    grid-column-start: 1;
+    grid-column-end: span 3;
 }
 
-.intro-paragraph {
+.intro-paragraph, .services-list {
     margin: 1rem;
     font-size: 18px;
     line-height: 1.6rem;
     padding: 1.5rem;
     color: black;
 }
+
+
 
 .icon-grid {
     display: grid;
@@ -226,9 +231,10 @@ a {
 }
 
 .tech-list {
-    /* font-size: 85%; */
+    font-size: 85%;
     text-align: center;
     list-style-type: square;
+    margin:6px;
 }
 
 .project-title {
@@ -272,6 +278,7 @@ a {
 .subheading {
     background-color: rgba(128, 128, 128, .7);
     margin:0 38% 5% 38%;
+    font-size:30px;
     padding: 15px;
     border-radius: 5px;
     letter-spacing: 3px;
@@ -288,5 +295,54 @@ a {
     font-size:1.5rem;
     padding:20px;
     border-radius:5px;
-    background-color:rgba(123, 207, 203, 0.7);
+    background-color:rgba(123, 207, 203, 0.85);
+}
+
+/* @media screen and (min-width:1024px) and (max-width:1440px){
+    .frost::before{
+        bottom:-60px;
+    }
+} */
+
+@media screen and (min-width:768px){
+    /* .frost::before{
+        bottom:-100px;
+    } */
+
+    .contact-links {
+        font-size: 1rem;
+        letter-spacing: 0;
+
+    }
+}
+
+@media screen and (max-width:768px){
+    .grid-wrapper, .col-3-wrapper{
+        grid-template-columns: 1fr;
+    }
+    #intro-banner {
+        grid-column-end: 1;
+
+    }
+    .tech-title {
+        text-align:center;
+        margin-left:0;
+    }
+
+    .contact-links {
+        font-size: 1rem;
+        letter-spacing: 0;
+    }
+
+    .contact-buttons {
+        grid-template-columns: 1fr;
+        grid-gap:3rem;
+    }
+
+    .frost::before {
+        display:none;
+    }
+
+    
+
 }
