--- a/newPortfolio2/client/src/main.css
+++ b/newPortfolio2/client/src/main.css
@@ -51,7 +51,7 @@ a {
     grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
     justify-items: center;
-    grid-gap: 1em;
+    grid-gap: .5em;
 }
 
 .wrapper>div {
@@ -179,7 +179,7 @@ a {
 
 .icon-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 2rem;
 }
 
