--- a/newPortfolio2/client/src/Navbar/navbar.css
+++ b/newPortfolio2/client/src/Navbar/navbar.css
@@ -62,12 +62,21 @@
 }
 
 #logo {
-    height: 85%;
     letter-spacing: 4px;
-    padding:9px;
+    padding:7px;
     border:2.5px solid white;
     border-radius: 4px;
-    margin-top: 10%;
+    opacity: 75%;
+}
+
+.fixed-link {
+    display: none;
+    position:fixed;
+    top:3%;
+    right:3%;
+    background-color:rgba(123, 207, 203, 0.7);
+    padding:7px;
+    border-radius: 5px;
 }
 
 @media screen and (max-width:768px) {
