--- a/newPortfolio2/client/src/main.css
+++ b/newPortfolio2/client/src/main.css
@@ -18,7 +18,6 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    
 }
 
 a {
@@ -318,21 +317,10 @@ a {
     background-color:rgba(123, 207, 203, 0.85);
 }
 
-/* @media screen and (min-width:1024px) and (max-width:1440px){
-    .frost::before{
-        bottom:-60px;
-    }
-} */
-
 @media screen and (min-width:768px){
-    /* .frost::before{
-        bottom:-100px;
-    } */
-
     .contact-links {
         font-size: 1rem;
         letter-spacing: 0;
-
     }
 }
 
@@ -340,6 +328,11 @@ a {
     .grid-wrapper, .col-3-wrapper{
         grid-template-columns: 1fr;
     }
+
+    .icon-grid, #mobile-grid{
+        grid-template-columns: repeat(3,1fr);
+    }
+
     #intro-banner {
         grid-column-end: 1;
 
@@ -347,6 +340,15 @@ a {
     .tech-title {
         text-align:center;
         margin-left:0;
+        margin-bottom: 0;
+    }
+
+    .card-content {
+        height:auto;
+    }
+
+    #mobile-grid {
+        margin-bottom:.5rem;
     }
 
     .contact-links {
@@ -355,7 +357,7 @@ a {
     }
 
     .contact-buttons {
-        grid-template-columns: 1fr;
+        grid-template-columns:1fr;
         grid-gap:3rem;
     }
 
