--- a/newPortfolio2/client/src/main.css
+++ b/newPortfolio2/client/src/main.css
@@ -1,5 +1,7 @@
 :root {
-    --shadow: 0 3px 5px rgba(207, 207, 207, 0.8);
+    --white-shadow: -5px 5px 10px rgba(224, 220, 220, 0.8);
+    --dark-shadow: -6px 5px 15px rgba(8, 6, 6, 0.8);
+
     --light: rgb(235, 221, 221);
     --dark: darkgray;
 }
@@ -45,6 +47,14 @@ a {
     grid-gap: 1em;
 }
 
+.grid-wrapper-card {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    align-items: center;
+    justify-items: center;
+    grid-gap: 1em;
+}
+
 .col-3-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -58,10 +68,13 @@ a {
 }
 
 .grid-wrapper>div {
+
+    align-items: center;
+}
+.grid-wrapper-card>div {
     padding: 1em;
     align-items: center;
 }
-
 .center {
     text-align: center;
 }
@@ -133,6 +146,7 @@ a {
     margin-top: 40%;
     margin-right: 10%;
     background-color: rgba(128, 128, 128, .7);
+    box-shadow: var(--dark-shadow);
     padding: 10px;
     border-radius: 5px;
     letter-spacing: 5px;
@@ -184,38 +198,43 @@ a {
     padding: 10px;
     letter-spacing: 3px;
     background-color: rgba(128, 128, 128, .7);
-    margin:2% 35% 0;
+    margin:2% 35% 2%;
     border-radius:5px;
+    box-shadow: -5px 5px 15px;
 }
 
 .project-card {
     margin: 0rem .3rem 2rem .3rem;
-    height:800px;
+    height:auto;
 }
 
 .card-content {
-    padding: 2rem;
-    height:725px;
+    padding: 1rem;
+    height:530px;
     border:2px solid rgba(183, 187, 187, 0.7);
     border-radius:5px;
+    background-color:rgba(183, 187, 187, 0.2);
+    box-shadow: var(--dark-shadow);
 }
-
 .project-thumb {
+    align-self: center;
     max-width: 100%;
     border-bottom: 1px solid white;
     border-radius: 5px;
-    box-shadow: 0 4px 2px -2px gray;
+    box-shadow: var(--dark-shadow);
     margin-bottom: 1%;
 }
 
 .list-wrapper {
+    margin:1rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: .5rem;
     justify-items: center;
-    padding:15px;
+    padding:10px;
     border-radius: 5px;
     background-color:rgba(123, 207, 203, 0.7);
+    box-shadow: var(--white-shadow);
 }
 
 .tech-title {
@@ -225,6 +244,7 @@ a {
     background-color:rgba(123, 207, 203, 0.7);
     padding:15px;
     border-radius: 5px;
+    box-shadow: var(--white-shadow);
 }
 
 .tech-list {
@@ -238,9 +258,11 @@ a {
     color: white;
     font-variant: small-caps;
     background-color:rgba(123, 207, 203, 0.7);
-    padding: 5px;
+    padding: 10px 5px;
+    margin:0 25%;
     border-radius: 5px;
     letter-spacing: 3px;
+    box-shadow: var(--white-shadow);
 }
 
 .project-links {
@@ -259,11 +281,13 @@ a {
 }
 
 .project-desc {
+    max-width: 70%;
     font-size: 90%;
     text-align: center;
     background-color:rgba(123, 207, 203, 0.7);
     padding:15px;
     border-radius: 5px;
+    box-shadow: var(--white-shadow);
 }
 
 /* Contact Section */
@@ -293,10 +317,11 @@ a {
 
 .contact-links {
     text-decoration:none;
-    font-size:2rem;
+    font-size:1.5rem;
     padding:20px;
     border-radius:5px;
     background-color:rgba(123, 207, 203, 0.85);
+    box-shadow: var(--white-shadow);
 }
 
 @media screen and (min-width:768px) and (max-width:1300px){
@@ -307,7 +332,7 @@ a {
 }
 
 @media screen and (max-width:768px){
-    .grid-wrapper, .col-3-wrapper{
+    .grid-wrapper,.grid-wrapper-card, .col-3-wrapper{
         grid-template-columns: 1fr;
     }
 
