--- a/newPortfolio2/client/src/main.css
+++ b/newPortfolio2/client/src/main.css
@@ -1,7 +1,6 @@
 :root {
-    --white-shadow: -5px 5px 10px rgba(224, 220, 220, 0.8);
+    --white-shadow: -2px 2px 10px rgba(224, 220, 220, 0.8);
     --dark-shadow: -6px 5px 15px rgba(8, 6, 6, 0.8);
-
     --light: rgb(235, 221, 221);
     --dark: darkgray;
 }
@@ -200,7 +199,7 @@ a {
     background-color: rgba(128, 128, 128, .7);
     margin:2% 35% 2%;
     border-radius:5px;
-    box-shadow: -5px 5px 15px;
+    box-shadow: -5px 5px 15px  rgba(128, 128, 128, .7);
 }
 
 .project-card {
